implemented service and work api's
