# src/models/interfaces/common-interfaces.ts
@@ -1,0 +1,6 @@
+export interface PaginationWithData<T> {
+  data: T[];
+  totalSize: number;
+  pageSize: number;
+  pageNumber: number;
+}
