# src/models/interfaces/my-work.interfaces.ts
@@ -1,0 +1,5 @@
+export interface MyWorkRequest {
+  serviceId: string;
+  pageSize: number;
+  pageNumber: number;
+}
